Fixed mobile button alignment.

--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ p span {
 
 #switchButton1, #switchButton2, #switchButton3{
     display: block;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 16px;
     cursor: pointer;
     border: none;
